rework diary service tests