@@ -1,5 +1,10 @@
 package codebuddies.MealooApp.services;
 
+import codebuddies.MealooApp.dataproviders.FoodDiaryProvider;
+import codebuddies.MealooApp.dto.FoodDiaryDTO;
+import codebuddies.MealooApp.dto.IngredientForMealDTO;
+import codebuddies.MealooApp.dto.MealDTO;
+import codebuddies.MealooApp.dto.MealooUserDTO;
 import codebuddies.MealooApp.entities.meal.Meal;
 import codebuddies.MealooApp.entities.meal.MealDifficulty;
 import codebuddies.MealooApp.entities.meal.MealMacronutrients;
@@ -7,9 +12,8 @@ import codebuddies.MealooApp.entities.product.Ingredient;
 import codebuddies.MealooApp.entities.product.Macronutrients;
 import codebuddies.MealooApp.entities.product.Product;
 import codebuddies.MealooApp.entities.product.ProductType;
-import codebuddies.MealooApp.entities.user.FoodDiary;
-import codebuddies.MealooApp.entities.user.MealooUser;
-import codebuddies.MealooApp.entities.user.NutritionSettings;
+import codebuddies.MealooApp.entities.user.*;
+import codebuddies.MealooApp.exceptions.RequiredMealsNotFoundException;
 import codebuddies.MealooApp.exceptions.ResourceNotFoundException;
 import codebuddies.MealooApp.repositories.FoodDiaryRepository;
 import org.hamcrest.Matchers;
@@ -19,6 +23,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
+import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -42,392 +47,355 @@ import static org.springframework.util.Assert.doesNotContain;
 @ExtendWith(SpringExtension.class)
 class FoodDiaryServiceTest {
 
+    ModelMapper modelMapper;
+
     @Mock
-    FoodDiaryRepository foodDiaryRepository;
+    FoodDiaryProvider diaryProvider;
+
+    @Mock
+    MealooUserService userService;
 
     @Mock
     MealService mealService;
-
-    @Mock
-    MealooUserService mealooUserService;
 
     Product product1;
     Product product2;
     Product product3;
 
-    Ingredient ingredient1;
-    Ingredient ingredient2;
-    Ingredient ingredient3;
+    IngredientForMealDTO ingredient1;
+    IngredientForMealDTO ingredient2;
+    IngredientForMealDTO ingredient3;
 
-    List<Ingredient> listOfIngredients1;
-    List<Ingredient> listOfIngredients2;
-    List<Ingredient> listOfIngredients3;
+    List<IngredientForMealDTO> listOfIngredients1;
+    List<IngredientForMealDTO> listOfIngredients2;
+    List<IngredientForMealDTO> listOfIngredients3;
 
-    Meal meal1;
-    Meal meal2;
-    Meal meal3;
+    MealDTO meal1;
+    MealDTO meal2;
+    MealDTO meal3;
 
-    List<Meal> listOfMeals1;
-    List<Meal> listOfMeals2;
-    List<Meal> listOfMeals3;
+    List<MealDTO> listOfMeals1;
+    List<MealDTO> listOfMeals2;
+    List<MealDTO> listOfMeals3;
 
-    MealooUser mealooUser1;
-    MealooUser mealooUser2;
+    MealooUserDTO user1;
+    MealooUserDTO user2;
 
-    FoodDiary foodDiary1;
-    FoodDiary foodDiary2;
-    FoodDiary foodDiary3;
+    FoodDiaryDTO foodDiary1;
+    FoodDiaryDTO foodDiary2;
+    FoodDiaryDTO foodDiary3;
 
-    List<FoodDiary> listOfDiaries;
+    List<FoodDiaryDTO> listOfDiaries;
 
-    FoodDiaryService foodDiaryService;
+    FoodDiaryService diaryService;
 
     @BeforeEach
     void setUp(){
-        product1 = new Product("Rice", 5, new Macronutrients(7, 79, 1), ProductType.GRAINS);
-        product2 = new Product("Chicken", 12, new Macronutrients(22, 1, 4), ProductType.MEAT);
-        product3 = new Product("Strawberry", 8, new Macronutrients(1, 8, 0), ProductType.GRAINS);
+        modelMapper = new ModelMapper();
+        product1 = new Product("Rice", 7, new Macronutrients(7, 79, 1), 357, ProductType.GRAINS);
+        product2 = new Product("Chicken", 13, new Macronutrients(22, 1, 4), 121, ProductType.MEAT);
+        product3 = new Product("Strawberry", 12, new Macronutrients(1, 8, 0), 35, ProductType.GRAINS);
 
-        ingredient1 = new Ingredient(100, product1);
-        ingredient2 = new Ingredient(200, product2);
-        ingredient3 = new Ingredient(500, product3);
+        ingredient1 = modelMapper.map(new Ingredient(100, product1), IngredientForMealDTO.class);
+        ingredient2 = modelMapper.map(new Ingredient(200, product2), IngredientForMealDTO.class);
+        ingredient3 = modelMapper.map(new Ingredient(500, product3), IngredientForMealDTO.class);
 
         listOfIngredients1 = Arrays.asList(ingredient1, ingredient2);
         listOfIngredients2 = Arrays.asList(ingredient1, ingredient3);
         listOfIngredients3 = Arrays.asList(ingredient2, ingredient3);
 
-        meal1 = new Meal("RiceAndChicken", listOfIngredients1, MealDifficulty.MEDIUM);
-        meal2 = new Meal("RiceAndStrawberry", listOfIngredients2, MealDifficulty.EASY);
-        meal3 = new Meal("ChickenAndStrawberry", listOfIngredients3, MealDifficulty.INSANE);
+        meal1 = new MealDTO("Rice and Chicken", listOfIngredients1, 3.3, MealDifficulty.HARD
+                    ,new MealMacronutrients(52, 79, 9), 605, "Example recipe 1", Collections.emptyList());
+
+        meal2 = new MealDTO("Rice and Strawberry", listOfIngredients2, 6.7, MealDifficulty.EASY
+                ,new MealMacronutrients(13, 119, 1), 537, "Example recipe 2", Collections.emptyList());
+
+        meal3 = new MealDTO("RiceAndChicken", listOfIngredients3, 8.6, MealDifficulty.INSANE
+                ,new MealMacronutrients(49, 40, 8), 428, "Example recipe 3", Collections.emptyList());
 
         listOfMeals1 = new ArrayList<>();
         listOfMeals1.add(meal1);
         listOfMeals1.add(meal2);
 
-        listOfMeals2 = new ArrayList<>(List.of(meal2, meal3));
+        listOfMeals2 = new ArrayList<>();
+        listOfMeals2.add(meal2);
+        listOfMeals2.add(meal3);
 
         listOfMeals3 = new ArrayList<>();
         listOfMeals3.add(meal1);
         listOfMeals3.add(meal3);
 
-        mealooUser1
-                = new MealooUser("User", "secretPassword", "johnsmith@gmail.com");
-        mealooUser2
-                = new MealooUser("Admin", "secretHardPassword", "andrewsmith@gmail.com");
+        user1 = new MealooUserDTO(1L, "Admin", "pass", MealooUserRole.ADMIN, "admin@gmail.com"
+                ,new NutritionSettings(3500)
+                , new MealooUserDetails(180, 90, 22, Sex.MALE, PhysicalActivity.HIGH));
 
-        foodDiary1 = new FoodDiary(listOfMeals1, LocalDate.now(), mealooUser1);
-        foodDiary2 = new FoodDiary(listOfMeals2, LocalDate.now(), mealooUser1);
-        foodDiary3 = new FoodDiary(listOfMeals3, LocalDate.now(), mealooUser2);
+        user2 = new MealooUserDTO(2L, "User", "secret", MealooUserRole.USER, "user@gmail.com"
+                ,new NutritionSettings(2500)
+                , new MealooUserDetails(170, 80, 27, Sex.FEMALE, PhysicalActivity.LITTLE));
+
+        foodDiary1 = new FoodDiaryDTO(1L, LocalDate.now(), listOfMeals1, new MealMacronutrients(100, 100, 100), 1000, 13.7);
+        foodDiary2 = new FoodDiaryDTO(2L, LocalDate.now(), listOfMeals2, new MealMacronutrients(90, 90, 90), 900, 60.0);
+        foodDiary3 = new FoodDiaryDTO(3L, LocalDate.now(), listOfMeals3, new MealMacronutrients(150, 150, 150), 150, 100.0);
 
         listOfDiaries = new ArrayList<>();
         listOfDiaries.add(foodDiary1);
         listOfDiaries.add(foodDiary2);
         listOfDiaries.add(foodDiary3);
 
-        foodDiaryService = new FoodDiaryService(foodDiaryRepository, mealService, mealooUserService);
+        diaryService = new FoodDiaryService(diaryProvider, userService, mealService);
+
     }
 
-    Page<FoodDiary> createTestPage(List<FoodDiary> foodDiaries, Pageable pageable){
-        return new PageImpl<>(foodDiaries, pageable, foodDiaries.size());
-    }
-
-    @Test
-    void shouldSaveFoodDiary() {
-        //given
-        given(foodDiaryRepository.save(foodDiary1)).willReturn(foodDiary1);
-        //when
-        FoodDiary result = foodDiaryService.save(foodDiary1);
-        //then
-        assertThat(result, sameInstance(foodDiary1));
+    Page<FoodDiaryDTO> createTestPage(List<FoodDiaryDTO> foodDiaries, Pageable pageable){
+        List<FoodDiaryDTO> diaries = listOfDiaries;
+        return new PageImpl<>(diaries, pageable, diaries.size());
     }
 
     @Test
-    void shouldFindAllDiariesForOneUser() {
+    void shouldReturnAllDiaries() {
         //given
-        given(foodDiaryRepository.findAll()).willReturn(listOfDiaries);
+        Pageable pageable = PageRequest.of(0, 3);
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        given(diaryService.getAllDiaries("Admin", pageable)).willReturn(createTestPage(listOfDiaries, pageable));
         //when
-        List<FoodDiary> diaries = foodDiaryService.findAll();
+        Page<FoodDiaryDTO> result = diaryService.getAllDiaries("Admin", pageable);
         //then
         assertAll(
-                () -> assertThat(diaries.get(0), sameInstance(foodDiary1)),
-                () -> assertThat(diaries.get(1), sameInstance(foodDiary2)),
-                () -> assertThat(diaries.size(), sameInstance(3))
+                () -> assertThat(result.getContent().get(0), is(listOfDiaries.get(0))),
+                () -> assertThat(result.getContent().get(1), is(listOfDiaries.get(1))),
+                () -> assertThat(result.getContent().get(2), is(listOfDiaries.get(2)))
         );
+
     }
 
     @Test
-    void shouldFindAllDiariesIfFoodDiariesWithGivenDataExist() {
-        //given
-        given(foodDiaryRepository.findByDate(LocalDate.now())).willReturn(Optional.of(listOfDiaries));
-        //when
-        List<FoodDiary> result = foodDiaryService.findByDate(LocalDate.now());
-        //then
-        assertThat(result, sameInstance(listOfDiaries));
-    }
-
-    @Test
-    void shouldThrowAResourceNotFoundExceptionWhenFoodDiariesWithGivenDataDoesNotExist() {
-        //given + when
-        given(foodDiaryRepository.findByDate(LocalDate.now())).willThrow(ResourceNotFoundException.class);
-        //then
-        assertThrows(ResourceNotFoundException.class, () -> foodDiaryService.findByDate(LocalDate.now()));
-    }
-
-    @Test
-    void shouldReturnAllDiariesForOnlyOneUser() {
-        //given
-
-        Pageable pageable = PageRequest.of(0,3);
-        given(foodDiaryRepository.findAll(pageable)).willReturn(createTestPage(listOfDiaries, pageable));
-        //when
-        List<FoodDiary> foodDiaries = foodDiaryService.findAllDiariesPageable(mealooUser1, pageable);
-        //then
-        assertAll(
-                () -> assertThat(foodDiaries.size(), equalTo(2)),
-                () -> assertThat(foodDiaries.get(0), not(equalTo(foodDiary3))),
-                () -> assertThat(foodDiaries.get(1), not(equalTo(foodDiary3)))
-        );
-    }
-
-    @Test
-    void shouldCreateNewDiaryForCurrentDate() {
-        //given
-        MealMacronutrients empty = new MealMacronutrients(0,0,0);
-        //
-        FoodDiary result = foodDiaryService.createNewDiary(mealooUser1);
-        //then
-        assertAll(
-                () -> assertThat(result.getDate(), equalTo(LocalDate.now())),
-                () -> assertThat(result.getTotalCalories(), equalTo(0)),
-                () -> assertThat(result.getTotalPrice(), equalTo(0.0F)),
-                () -> assertThat(result.getMealMacronutrients(), equalTo(empty)),
-                () -> verify(foodDiaryRepository, times(1)).save(any())
-
-        );
-    }
-
-    @Test
-    void shouldFindDairyOfCurrentDateIfExistForGivenUser(){
-        //given
-        LocalDate date = LocalDate.of(2020, 8, 25);
-        listOfDiaries.get(1).setDate(date);
-        given(foodDiaryRepository.findAll()).willReturn(listOfDiaries);
-        //when
-        FoodDiary result = foodDiaryService.findDiaryOfDay(mealooUser1, date.toString());
-        //then
-        assertThat(result, sameInstance(foodDiary2));
-    }
-
-    @Test
-    void shouldCreateNewDiaryForCurrentDiaryIfNotExistForGivenUser(){
-        //given
-        LocalDate date = LocalDate.of(2020, 8, 25);
-        List<FoodDiary> diaries = new ArrayList<>();
-        diaries.add(foodDiary1);
-        diaries.add(foodDiary2);
-        given(foodDiaryRepository.findAll()).willReturn(diaries);
-        FoodDiary newDiary = new FoodDiary(Collections.emptyList(), LocalDate.now(), mealooUser1);
-        //when
-        FoodDiary result = foodDiaryService.findDiaryOfDay(mealooUser1, date.toString());
-        //then
-        assertAll(
-                () -> assertThat(result.getDate(), equalTo(newDiary.getDate())),
-                () -> assertThat(result.getTotalPrice(), equalTo(0.0F)),
-                () -> assertThat(result.getTotalCalories(), equalTo(0)),
-                () -> assertThat(result.getListOfMeals(), equalTo(Collections.emptyList())),
-                () -> assertThat(result.getMealMacronutrients().getTotalCarbohydrates(), equalTo(0))
-        );
-    }
-
-    @Test
-    void shouldCreateNewDiaryForCurrentDiaryIfNotExistForGivenUser2(){
-        //given
-        LocalDate date = LocalDate.of(2020, 8, 25);
-        given(foodDiaryRepository.findAll()).willReturn(listOfDiaries);
-        LocalDate currentDate = LocalDate.now();
-        //when
-        FoodDiary result = foodDiaryService.findDiaryOfDay(mealooUser1, date.toString());
-        //then
-        assertAll(
-                () -> assertThat(result.getDate(), equalTo(currentDate)),
-                () -> assertThat(result.getTotalPrice(), equalTo(0.0F)),
-                () -> assertThat(result.getTotalCalories(), equalTo(0)),
-                () -> assertThat(result.getListOfMeals(), equalTo(Collections.emptyList())),
-                () -> assertThat(result.getMealMacronutrients().getTotalCarbohydrates(), equalTo(0))
-        );
-    }
-
-
-    @Test
-    void shouldAddMealToCurrentDiaryIfMealExist() {
-        //given
-        given(mealService.findByName("RiceAndStrawberry")).willReturn(meal2);
-        given(mealooUserService.findByUsername("Admin")).willReturn(mealooUser2);
-        List<FoodDiary> listOfDiaries = new ArrayList<>();
-        listOfDiaries.add(foodDiary3);
-        int totalCaloriesBefore = foodDiary3.getTotalCalories();
-        float totalPriceBefore = foodDiary3.getTotalPrice();
-        given(foodDiaryRepository.findAll()).willReturn(listOfDiaries);
-        mealooUser2.setFoodDiaries(List.of(foodDiary3));
-        //when
-        foodDiaryService.addMealToCurrentDiary("Admin", "RiceAndStrawberry");
-        //then
-        assertAll(
-                () -> assertThat(mealooUser2.getFoodDiaries().get(0).getListOfMeals().size(), equalTo(3)),
-                () -> assertThat(mealooUser2.getFoodDiaries().get(0).getListOfMeals().get(2).getName(), equalTo("RiceAndStrawberry")),
-                () -> assertThat(mealooUser2.getFoodDiaries().get(0).getTotalCalories(), greaterThan(totalCaloriesBefore)),
-                () -> assertThat(mealooUser2.getFoodDiaries().get(0).getTotalPrice(), greaterThan(totalPriceBefore))
-        );
-    }
-    @Test
-    void shouldRejectMealsIfDateBetweenCurrentIsLessThanThree(){
+    void shouldFindCurrentDiaryForUser(){
         //given
         LocalDate currentDate = LocalDate.now();
-        LocalDate fourDaysBefore = currentDate.minusDays(4);
-        LocalDate fiveDaysBefore = currentDate.minusDays(5);
-        foodDiary2.setDate(fourDaysBefore);
-        foodDiary3.setDate(fiveDaysBefore);
-        mealooUser1.setFoodDiaries(listOfDiaries);
-        given(foodDiaryRepository.findAll()).willReturn(listOfDiaries);
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        given(diaryProvider.getDiaryByDate(user1, currentDate)).willReturn(foodDiary1);
         //when
-        List<String> rejectedMealNames = foodDiaryService.rejectMealsFromThreeDaysBack(mealooUser1);
+        FoodDiaryDTO currentDiary = diaryService.getCurrentDiary("Admin");
+        //then
+        assertThat(currentDiary, sameInstance(foodDiary1));
+    }
+
+    @Test
+    void shouldFindDiaryForUserByDate(){
+        //given
+        String sDate = "2020-08-20";
+        LocalDate date = LocalDate.parse(sDate);
+        foodDiary2.setDate(date);
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        given(diaryProvider.getDiaryByDate(user1, date)).willReturn(foodDiary2);
+        //when
+        FoodDiaryDTO diary = diaryService.getDiaryByDate("Admin", "2020-08-20");
+        //then
+        assertThat(diary, sameInstance(foodDiary2));
+    }
+
+    @Test
+    void shouldCreateNewDiary(){
+        //given
+        LocalDate currentDate = LocalDate.now();
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        given(diaryProvider.createDiary(user1, currentDate))
+                .willReturn(new FoodDiaryDTO(5L, currentDate, Collections.emptyList()
+                            ,new MealMacronutrients(0,0,0), 0, 0.0));
+        //when
+        FoodDiaryDTO newDiary = diaryService.createDiary("Admin");
         //then
         assertAll(
-                () -> assertThat(rejectedMealNames.size(), equalTo(2)),
-                () -> assertThat(rejectedMealNames.get(0),equalTo(listOfMeals1.get(0).getName())),
-                () -> assertThat(rejectedMealNames.get(1), equalTo(listOfMeals1.get(1).getName()))
+                () -> assertThat(newDiary.getListOfMeals().size(), equalTo(0)),
+                () -> assertThat(newDiary.getTotalCalories(), equalTo(0)),
+                () -> assertThat(newDiary.getTotalCalories(), equalTo(0))
+        );
+
+    }
+
+    @Test
+    void shouldRecalculateMacronutrientsAccordingToMeals(){
+        //given
+        int totalProteinsBefore = foodDiary1.getMealMacronutrients().getTotalProteins();
+        int totalCarbohydratesBefore = foodDiary1.getMealMacronutrients().getTotalCarbohydrates();
+        int totalFatesBefore = foodDiary1.getMealMacronutrients().getTotalFats();
+        foodDiary1.getListOfMeals().get(0).getIngredients().get(0).setAmount(1000);
+        //when
+        diaryService.recalculateData(foodDiary1);
+        //then
+        assertAll(
+                () -> assertThat(totalProteinsBefore, not(equalTo(foodDiary1.getMealMacronutrients().getTotalProteins()))),
+                () -> assertThat(totalCarbohydratesBefore, not(equalTo(foodDiary1.getMealMacronutrients().getTotalCarbohydrates()))),
+                () -> assertThat(totalFatesBefore, not(equalTo(foodDiary1.getMealMacronutrients().getTotalFats())))
         );
     }
 
     @Test
-    void shouldThrowRuntimeExceptionWhenTotalCaloriesIsLessThanZero(){
-        //given + when
-        int totalCalories = - 20;
-        int numberOfMeals = 5;
+    void shouldRecalculatePriceAccordingToMeals(){
+        //given
+        double totalPriceBefore = foodDiary1.getTotalPrice();
+        foodDiary1.getListOfMeals().get(0).setPrice(7);
+        //when
+        diaryService.recalculatePrice(foodDiary1);
         //then
-        Exception exception = assertThrows(RuntimeException.class, () ->
-                foodDiaryService.generateDiet(totalCalories, numberOfMeals, mealooUser1.getUsername()));
-
-        String expectedMessage = "Total calories should be higher than 0 and less than 10000," +
-                " This app is not created for hulks";
-        String actualMessage = exception.getMessage();
-        assertTrue(actualMessage.contains(expectedMessage));
+        assertThat(totalPriceBefore, is(foodDiary1.getTotalPrice()));
     }
 
     @Test
-    void shouldThrowExceptionRuntimeExceptionWhenTotalCaloriesIsMoreThan10000(){
-        //given + when
-        int totalCalories = 11000;
-        int numberOfMeals = 5;
+    void shouldRecalculateTotalCaloriesAccordingToMeals(){
+        //given
+        double totalPriceBefore = foodDiary1.getTotalCalories();
+        foodDiary1.setTotalCalories(0);
+        //when
+        diaryService.recalculatePrice(foodDiary1);
         //then
-            Exception exception = assertThrows(RuntimeException.class, () ->
-                foodDiaryService.generateDiet(totalCalories, numberOfMeals, mealooUser1.getUsername()));
-
-        String expectedMessage = "Total calories should be higher than 0 and less than 10000," +
-                " This app is not created for hulks";
-        String actualMessage = exception.getMessage();
-        assertTrue(actualMessage.contains(expectedMessage));
+        assertThat(totalPriceBefore, is(not(0)));
     }
 
     @Test
-    void shouldThrowERuntimeExceptionWhenNumberOfMealsIsLessThan3(){
+    void shouldAddMeal(){
+        //given
+        LocalDate currentDate = LocalDate.now();
+
+        FoodDiaryDTO foodDiary4 = new FoodDiaryDTO(6L, LocalDate.now(), List.of(meal1, meal2, meal3)
+                , new MealMacronutrients(150, 150, 150), 150, 100.0);
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        given(mealService.getMealByName("Chicken and Strawberries")).willReturn(meal3);
+        given(diaryProvider.updateDiary(foodDiary1, user1)).willReturn(foodDiary4);
+        given(diaryProvider.getDiaryByDate(user1, currentDate)).willReturn(foodDiary1);
+        //when
+        FoodDiaryDTO diary4 = diaryService.addMeal("Admin", "Chicken and Strawberries");
+        //then
+        assertAll(
+                () -> assertThat(diary4.getListOfMeals().size(),equalTo(foodDiary4.getListOfMeals().size())),
+                () -> assertThat(diary4.getListOfMeals(), hasItem(meal3))
+        );
+
+    }
+
+    @Test
+    void shouldDeleteMeal(){
+        //given
+        LocalDate currentDate = LocalDate.now();
+        List<MealDTO> listOfAll = new ArrayList<>();
+        listOfAll.add(meal1);
+        listOfAll.add(meal2);
+        listOfAll.add(meal3);
+        FoodDiaryDTO foodDiary4 = new FoodDiaryDTO(6L, LocalDate.now(), listOfAll
+                , new MealMacronutrients(150, 150, 150), 150, 100.0);
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        given(mealService.getMealByName("Chicken and Strawberries")).willReturn(meal3);
+        given(diaryProvider.updateDiary(foodDiary4, user1)).willReturn(foodDiary1);
+        given(diaryProvider.getDiaryByDate(user1, currentDate)).willReturn(foodDiary4);
+        //when
+        FoodDiaryDTO diary4 = diaryService.addMeal("Admin", "Chicken and Strawberries");
+        //then
+        assertAll(
+                () -> assertThat(diary4.getListOfMeals().size(),equalTo(foodDiary1.getListOfMeals().size())),
+                () -> assertThat(diary4.getListOfMeals(), not(hasItem(meal3)))
+        );
+    }
+
+    @Test
+    void shouldReturnNamesOfMealsUsedThreeDaysBack(){
+        //given
+        LocalDate threeDaysBack = LocalDate.now().minusDays(3);;
+        given(diaryProvider.rejectMealsFromThreeDaysBack(user1, threeDaysBack)).willReturn(List.of(foodDiary1, foodDiary3));
+        //when
+        List<String> listOfNames = diaryService.rejectMealsFromThreeDaysBack(user1);
+        //then
+        assertAll(
+                () -> assertThat(listOfNames.size(), equalTo(4)),
+                () -> assertThat(listOfNames, hasItem("Rice and Strawberry"))
+        );
+    }
+
+    @Test
+    void shouldThrowRunTimeExceptionIfAmountOfCaloriesIsLessThanZero(){
+        //given + when
+        int totalCalories = -5;
+        int numberOfMeals = 5;
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        // then
+        assertThrows(RuntimeException.class, () ->
+                diaryService.generateDiet(totalCalories, numberOfMeals, user1.getUsername()));
+    }
+
+    @Test
+    void shouldThrowRunTimeExceptionIfAmountOfCaloriesIsGreaterThanTenThousands(){
+        //given + when
+        int totalCalories = 100001;
+        int numberOfMeals = 5;
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        // then
+        assertThrows(RuntimeException.class, () ->
+                diaryService.generateDiet(totalCalories, numberOfMeals, user1.getUsername()));
+    }
+
+    @Test
+    void shouldThrowRunTimeExceptionIfNumberOfMealsIsLessThanThree(){
         //given + when
         int totalCalories = 2500;
-        int numberOfMeals = 1;
-        //then
-        Exception exception = assertThrows(RuntimeException.class, () ->
-                foodDiaryService.generateDiet(totalCalories, numberOfMeals, mealooUser1.getUsername()));
-
-        String expectedMessage = "Numbers of meals should vary from 3 to 7";
-        String actualMessage = exception.getMessage();
-        assertTrue(actualMessage.contains(expectedMessage));
+        int numberOfMeals = 2;
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        // then
+        assertThrows(RuntimeException.class, () ->
+                diaryService.generateDiet(totalCalories, numberOfMeals, user1.getUsername()));
     }
 
     @Test
-    void shouldThrowRuntimeExceptionWhenNumberOfMealsIsMoreThan7(){
+    void shouldThrowRunTimeExceptionIfNumberOfMealsIsGreaterThan7(){
         //given + when
         int totalCalories = 2500;
         int numberOfMeals = 10;
-        //then
-        Exception exception = assertThrows(RuntimeException.class, () ->
-                foodDiaryService.generateDiet(totalCalories, numberOfMeals, mealooUser1.getUsername()));
-
-        String expectedMessage = "Numbers of meals should vary from 3 to 7";
-        String actualMessage = exception.getMessage();
-        assertTrue(actualMessage.contains(expectedMessage));
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        // then
+        assertThrows(RuntimeException.class, () ->
+                diaryService.generateDiet(totalCalories, numberOfMeals, user1.getUsername()));
     }
 
     @Test
-    void shouldThrowRuntimeExceptionIfDiaryWasAlreadyCreated(){
+    void shouldThrowRunTimeExceptionIfAnyMealsExistInCurrentDiary(){
         //given + when
         int totalCalories = 2500;
         int numberOfMeals = 5;
-        List<FoodDiary> emptyDiary = new ArrayList<>();
-        given(foodDiaryRepository.findAll()).willReturn(emptyDiary);
-        //then
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        // then
         assertThrows(RuntimeException.class, () ->
-                foodDiaryService.generateDiet(totalCalories, numberOfMeals, mealooUser1.getUsername()));
+                diaryService.generateDiet(totalCalories, numberOfMeals, user1.getUsername()));
     }
 
     @Test
-    void shouldThrowResourceFoundExceptionIfListOfNamesIsLessThanNumberOfMealsRequired(){
+    void shouldThrowRequiredMealsNotFoundExceptionIfListOfMealsForGeneratorIsTooSmall(){
         //given + when
         int totalCalories = 2500;
-        int numberOfMeals = 4;
-        List<String> smallList = new ArrayList<>(List.of("Potato", "Cucubmer"));
-        given(mealService.findAllNamesOfMatchingMeals(anyInt())).willReturn(smallList);
-        //then
-        Exception exception = assertThrows(ResourceNotFoundException.class, () ->
-                foodDiaryService.generateDiet(totalCalories, numberOfMeals, mealooUser1.getUsername()));
-        String expectedMessage = "Sorry, database does not contain required meals." +
-                " Try to add new meals or create your own diary manually";
-        String actualMessage = exception.getMessage();
-        assertTrue(actualMessage.contains(expectedMessage));
+        int numberOfMeals = 5;
+        given(userService.getUserByUsername("Admin")).willReturn(user1);
+        given(diaryProvider.getDiaryByDate(user1, LocalDate.now())).willReturn(foodDiary1);
+        foodDiary1.setListOfMeals(Collections.emptyList());
+        given(mealService.findNamesOfMatchingMeals(500)).willReturn(Collections.emptyList());
+        // then
+        assertThrows(RequiredMealsNotFoundException.class, () ->
+                diaryService.generateDiet(totalCalories, numberOfMeals, user1.getUsername()));
     }
 
-
     @Test
-    void shouldDeleteMealFromCurrentDiaryIfMealExist() {
+    void shouldDiscardMismatchedMeals(){
         //given
-        given(mealService.findByName("RiceAndChicken")).willReturn(meal1);
-        given(mealooUserService.findByUsername("Admin")).willReturn(mealooUser2);
-        int totalCaloriesBefore = foodDiary3.getTotalCalories();
-        float totalPriceBefore = foodDiary3.getTotalPrice();
-        given(foodDiaryRepository.findAll()).willReturn(listOfDiaries);
-        mealooUser2.setFoodDiaries(List.of(foodDiary3));
+        List<String> matchingMeals = new ArrayList<>();
+        matchingMeals.add("Rice and Chicken");
+        matchingMeals.add("Scrambled Eggs");
+        matchingMeals.add("Rice and Strawberry");
+        matchingMeals.add("Hamburger");
+        List<String> rejectedMeals = List.of("Rice and Chicken", "Rice and Strawberry");
         //when
-        FoodDiary result = foodDiaryService.deleteMealFromCurrentDiary(mealooUser2.getUsername(), "RiceAndChicken");
+        List<String> result = diaryService.discardMismatchedMeals(matchingMeals, rejectedMeals);
         //then
         assertAll(
-                () -> assertThat(result.getListOfMeals().size(), equalTo(1)),
-                () -> assertThat(result.getListOfMeals(), not(Matchers.contains(meal1))),
-                () -> assertThat(result.getTotalCalories(), lessThan(totalCaloriesBefore)),
-                () -> assertThat(result.getTotalPrice(), lessThan(totalPriceBefore))
+                () -> assertThat(result, not(hasItem("Rice and Strawberry"))),
+                () -> assertThat(result, not(hasItem("Rice and Chicken")))
         );
     }
 
-    @Test
-    void shouldThrowAResourceNotFoundExceptionDuringAddingMealToCurrentDiaryIfMealDoesNotExist() {
-        //given + when
-        given(mealService.findByName("WillowPears")).willThrow(ResourceNotFoundException.class);
-        //then
-        assertThrows(ResourceNotFoundException.class, () -> foodDiaryService.addMealToCurrentDiary(mealooUser2.getUsername(), "WillowPears"));
-    }
 
-
-    @Test
-    void shouldThrowAResourceNotFoundExceptionDuringDeletingMealFromCurrentDiaryIfMealDoesNotExistInDatabase() {
-        //given + when
-        given(mealService.findByName("WillowPears")).willThrow(ResourceNotFoundException.class);
-        //then
-        assertThrows(ResourceNotFoundException.class, () -> foodDiaryService.deleteMealFromCurrentDiary(mealooUser2.getUsername(), "WillowPears"));
-    }
-
-    @Test
-    void shouldThrownAResourceNotFoundExceptionWhenDeletingMealFromCurrentDiaryIfFoodDiaryDoesNotContainGivenMeal(){
-        //given + when
-        given(mealService.findByName("RiceAndStrawberry")).willReturn(meal2);
-        //then
-        assertThrows(ResourceNotFoundException.class, () -> foodDiaryService.deleteMealFromCurrentDiary(mealooUser2.getUsername(), "RiceAndStrawberry"));
-    }
 }
